@@ -1,0 +1,2 @@
+MIT License
+Source: https://github.com/nayarsystems/posix_tz_db
